--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^5.0.0-beta.2",
     "express-cors": "^0.0.3",
+    "firebase": "^10.9.0",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
